# apfs

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  TODO
cmake/: cmake_uninstall.cmake.in
cmake/Modules/: AppleMultiArch.cmake
libapfs/: CMakeLists.txt
libapfs/headers/apfs/: apfs.h  base.h  libapfs_config.h.cmake  object.h  session.h  volume.h
libapfs/headers/apfs/internal/: base.h  container_view.h  directory.h  extent.h  file.h  object.h  object_cache.h  xattr.h
libapfs/sources/: object.cpp  session.cpp  volume.cpp
libapfs/sources/internal/: directory.cpp  file.cpp  object.cpp  object_cache.cpp  xattr.cpp
libnx/: CMakeLists.txt
libnx/headers/nx/: base.h  container.h  context.h  device.h  enumerator.h  logger.h  nx.h  object.h  severity.h  stack.h  swap.h  volume.h
libnx/headers/nx/format/: apfs.h  base.h  nx.h  nx_dumper.h  swap.h
libnx/headers/private/nx/: btree_traverser.h
libnx/sources/: btree_traverser.cpp  container.cpp  context.cpp  device.cpp  enumerator.cpp  object.cpp  volume.cpp
libnx/sources/format/: apfs.c  apfsdump.c  formatting.h  nx.c  nx_dumper.c  nxdump.c
libnxcompat/: CMakeLists.txt
libnxcompat/headers/nxcompat/: nxcompat.h  nxcompat_config.h.cmake
libnxcompat/sources/: fblkinfo.c  fchflags.c  fsetxattr.c  ftruncate.c  futimens.c  getopt.c  pread.c  pwrite.c  symlink.c  winerror.c
libnxtools/: CMakeLists.txt
libnxtools/headers/nxtools/: file_logger.h  native.h  path.h  stderr_logger.h  string.h  syslog_logger.h  time.h
libnxtools/sources/: file_logger.cpp  native.cpp  path.cpp  stderr_logger.cpp  string.cpp  syslog_logger.cpp  time.cpp
macos/: CMakeLists.txt  install-bundle
macos/nxapfs.fs/Contents/: Info.plist  version.plist
mount/: CMakeLists.txt  base.cpp  base.h  directory.cpp  directory.h  file.cpp  file.h  fuse_bridge.cpp  mount_apfs.cpp  mount_nx.cpp  nx_root.cpp  nx_root.h  nx_volume.cpp  nx_volume.h  object.cpp  object.h  rsrcfork.cpp  rsrcfork.h  system_fuse.h  volume.cpp  volume.h  xattr_directory.cpp  xattr_directory.h  xattr_file.cpp  xattr_file.h  xattr_object_directory.cpp  xattr_object_directory.h
mount/cmake/Modules/: FindFUSE.cmake
tools/: CMakeLists.txt  apfs_content.cpp  apfs_extract.cpp  apfs_omap.cpp  apfs_probe.cpp  apfs_traverse.cpp  main.cpp  nx_omap.cpp  nx_probe.cpp  nx_scavenge.cpp
